--- a/Final/Bookshelf/templates/home.html
+++ b/Final/Bookshelf/templates/home.html
@@ -6,7 +6,7 @@
     <h1>Vítejte v My Bookshelf!</h1>
     <p>Spravujte svou osobní knihovnu, hodnoťte knihy, tvořte wishlisty a sledujte, co jste přečetli.</p>
 
-    <form method="GET" action="{% url 'search' %}" class="mt-4">
+    <form method="GET" action="{% url 'book-list' %}" class="mt-4">
         <div class="input-group">
             <input type="text" name="q" class="form-control" placeholder="Hledat knihy, autory..." />
             <button type="submit" class="btn btn-primary">Hledat</button>
