--- a/Final/Bookshelf/templates/includes/sidebar.html
+++ b/Final/Bookshelf/templates/includes/sidebar.html
@@ -5,13 +5,14 @@
       <ul class="nav flex-column">
         <li class="nav-item"><a href="{% url 'book-list' %}" class="nav-link">📚 Knihy</a></li>
         <a href="{% url 'authors-list' %}" class="nav-link">🧑‍💼 Autoři</a>
-        <li class="nav-item"><a href="{% url 'genres' %}" class="nav-link">🏷️ Žánry</a></li>
+        <li class="nav-item"><a href="{% url 'genres' %}" class="nav-link">📚 Žánry</a></li>
         <li class="nav-item"><a href="{% url 'books-wishlist' %}" class="nav-link">📌 Wishlist</a></li>
         <li class="nav-item"><a href="{% url 'books-read' %}" class="nav-link">✅ Přečtené</a></li>
         <li class="nav-item"><a href="{% url 'my-library' %}" class="nav-link">📖 Moje knihovna</a></li>
         <li class="nav-item"><a href="{% url 'loans' %}" class="nav-link">📦 Výpůjčky</a></li>
         <li class="nav-item"><a href="{% url 'about' %}" class="nav-link">ℹ️ O projektu</a></li>
         <li class="nav-item"><a href="{% url 'reading-room' %}" class="nav-link">🛋️ Čítárna</a></li>
+        <li class="nav-item"><a href="{% url 'tag-list' %}" class="nav-link">🏷️ Štítky</a></li>
       </ul>
     </div>
 
