--- a/Final/Bookshelf/templates/books/about.html
+++ b/Final/Bookshelf/templates/books/about.html
@@ -2,6 +2,29 @@
 {% block title %}O projektu{% endblock %}
 
 {% block content %}
-<h2>ℹ️ O projektu</h2>
-<p>My Bookshelf je osobní knihovní aplikace určená pro správu knih, hodnocení, komentáře a další funkce. Slouží jako jednoduchý přehled o přečtených i plánovaných knihách.</p>
+<h2>O projektu</h2>
+
+<p><strong>My Bookshelf</strong> je osobní knihovní aplikace určená pro správu knih, hodnocení, komentáře a další funkce. Slouží jako jednoduchý přehled o přečtených i plánovaně čtených knihách.</p>
+
+<p>Jedná se o závěrečný projekt do kurzu <strong>Programování v Pythonu</strong> akademie IT Step.</p>
+
+<p><strong>Hlavní prvky použité při vytváření stránek:</strong></p>
+<ul>
+    <li>Možnost přihlášení uživatele s možností registrace nových uživatelů.</li>
+    <li>Možnost vytvoření si své osobní knihovny, kde budou knihy přečtené, hodnocené i ty, které má uživatel ve wishlistu.</li>
+    <li>Jednotlivé knihy lze hodnotit, komentovat, lze přidávat nové knihy a upravovat již stávající.</li>
+    <li>Fulltextové vyhledávání v seznamu knih, který lze zároveň řadit dle různých kritérií (dle autora, žánru, umístění knihy v knihovně...).</li>
+    <li>Upravovat a přidávat knihy smí pouze registrovaní uživatelé.</li>
+</ul>
+
+<p><strong>Použité programy/prostředí:</strong></p>
+<ul>
+    <li>Python 3.13.2</li>
+    <li>Django 5.2.3</li>
+    <li>Bootstrap 5.3</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+</ul>
+
 {% endblock %}
