--- a/Final/Bookshelf/templates/books/about.html
+++ b/Final/Bookshelf/templates/books/about.html
@@ -11,10 +11,11 @@
 <p><strong>Hlavní prvky použité při vytváření stránek:</strong></p>
 <ul>
     <li>Možnost přihlášení uživatele s možností registrace nových uživatelů.</li>
-    <li>Možnost vytvoření si své osobní knihovny, kde budou knihy přečtené, hodnocené i ty, které má uživatel ve wishlistu.</li>
+    <li>Možnost vytvoření si své osobní knihovny, kde budou knihy přečtené a hodnocené.</li>
     <li>Jednotlivé knihy lze hodnotit, komentovat, lze přidávat nové knihy a upravovat již stávající.</li>
     <li>Fulltextové vyhledávání v seznamu knih, který lze zároveň řadit dle různých kritérií (dle autora, žánru, umístění knihy v knihovně...).</li>
     <li>Upravovat a přidávat knihy smí pouze registrovaní uživatelé.</li>
+    <li>Ke knihám mohou přihlášení uživatelé přidávat tagy (štítky), které seskupují knihy do celků a přispívají k lepšímu vyhledávání.</li>
 </ul>
 
 <p><strong>Použité programy/prostředí:</strong></p>
