--- a/Final/Bookshelf/templates/books/reading_room.html
+++ b/Final/Bookshelf/templates/books/reading_room.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <h2>📚 Čítárna je obsazená!</h2>
-<p>Prosím nerušit. Kapybara se ponořila do stránek své oblíbené knihy.</p>
+<p>Prosím nerušit.</p>
 
 <div class="text-center mt-4">
     <img src="{% static 'images/capyread.png' %}" alt="Kapybara čte" class="img-fluid rounded shadow" style="max-width: 600px;">
