--- a/Final/Bookshelf/templates/home.html
+++ b/Final/Bookshelf/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Vítejte v My Bookshelf!</h1>
-    <p>Spravujte svou osobní knihovnu, hodnoťte knihy, tvořte wishlisty a sledujte, co jste přečetli.</p>
+    <p>Katalogizačním nástroji, aby se v tom knižním moři dalo nějak vyznat.</p>
 
     <form method="GET" action="{% url 'book-list' %}" class="mt-4">
         <div class="input-group">
