--- a/Final/Bookshelf/templates/base.html
+++ b/Final/Bookshelf/templates/base.html
@@ -31,7 +31,7 @@
 <body>
     {% include 'includes/header.html' %}
 
-    <div class="d-flex" style="margin-top: 56px;">  <!-- posun dolů o výšku topbaru -->
+    <div class="d-flex" style="margin-top: 56px;">
         <div class="sidebar">
             {% include 'includes/sidebar.html' %}
         </div>
