--- a/Final/Bookshelf/templates/books/my_library.html
+++ b/Final/Bookshelf/templates/books/my_library.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>📚 Moje knihovna</h2>
-<p class="text-muted">Seznam knih, které jste přečetli, označili do wishlistu nebo hodnotili.</p>
+<p class="text-muted">Seznam knih, které jste přečetli, nebo hodnotili.</p>
 
 <div class="row">
     {% for book in books %}
