--- a/Final/Bookshelf/templates/includes/footer.html
+++ b/Final/Bookshelf/templates/includes/footer.html
@@ -1,5 +1,14 @@
-    </div> <!-- konec .content -->
-</div> <!-- konec wrapperu -->
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-{% block extra_js %}{% endblock %}
+{% block extra_js %}
+    <footer class="bg-light text-center py-3 mt-5 border-top">
+  <div class="container">
+    <p class="mb-1">© 2025 My Bookshelf</p>
+    <p class="mb-0">
+      Kontakt: <a href="mailto:tadyjetomovo@gmail.com">tadyjetomovo@gmail.com</a>
+    </p>
+  </div>
+</footer>
+{% endblock %}
