--- a/Final/Bookshelf/templates/books/book_form.html
+++ b/Final/Bookshelf/templates/books/book_form.html
@@ -49,21 +49,15 @@
       <div>
         {% for checkbox in form.tags %}
           <div class="form-check form-check-inline">
-            <input
-              type="checkbox"
-              name="{{ checkbox.name }}"
-              value="{{ checkbox.choice_value }}"
-              id="{{ checkbox.id_for_label }}"
-              class="form-check-input"
-              {% if checkbox.is_checked %}checked{% endif %}
-            >
-            <label for="{{ checkbox.id_for_label }}" class="form-check-label">
+            {{ checkbox.tag }}
+            <label for="{{ checkbox.id_for_label }}" class="form-check-label ms-1">
               {{ checkbox.choice_label }}
             </label>
           </div>
         {% endfor %}
       </div>
     </div>
+
 
     <button type="submit" class="btn btn-primary">💾 Uložit změny</button>
 </form>
