--- a/Final/Bookshelf/templates/home_authenticated.html
+++ b/Final/Bookshelf/templates/home_authenticated.html
@@ -5,169 +5,178 @@
 {% block content %}
 <h2>Vítej zpět, {{ user.username }}!</h2>
 
-<h4>🆕 Naposled přidané</h4>
-<div class="row">
-  {% for book in recently_added_books %}
-    <div class="col-md-3 mb-3">
-      <div class="card h-100">
-        {% if book.cover_image %}
-          <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-          style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
-        {% endif %}
-        <div class="card-body">
-          <h5 class="card-title">{{ book.title }}</h5>
-          <p class="card-text">{{ book.author }}</p>
-          <a href="{% url 'book-detail' book.pk %}" class="btn btn-sm btn-primary">Detail</a>
+<div class="mt-4">
+  <h4>🆕 Naposled přidané
+    <a href="{% url 'book-list' %}?sort=newest" class="btn btn-sm btn-link float-end">Zobrazit vše</a>
+  </h4>
+  <div class="row">
+    {% for book in recently_added_books %}
+      <div class="col-md-3 mb-3">
+        <div class="card h-100">
+          {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+          {% endif %}
+          <div class="card-body">
+            <h5 class="card-title">{{ book.title }}</h5>
+            <p class="card-text">{{ book.author }}</p>
+            <a href="{% url 'book-detail' book.pk %}" class="btn btn-sm btn-primary">Detail</a>
+          </div>
         </div>
       </div>
-    </div>
-  {% empty %}
-    <p class="text-muted">Žádné nové knihy.</p>
-  {% endfor %}
-</div>
-
-<h4>🆕 Naposled přidané
-  <a href="{% url 'book-list' %}?sort=newest" class="btn btn-sm btn-link float-end">Zobrazit vše</a>
-</h4>
-
-<div class="mt-4">
-    <h4>📖 Naposledy přečteno <a href="{% url 'books-read' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
-    <div class="row">
-        {% for book in recently_read %}
-            <div class="col-md-3 mb-3">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                                {{ book.title }}
-                            </a>
-                        </h5>
-                        <p class="card-text">{{ book.author }}</p>
-
-                        {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
-                        <p class="text-warning mb-0">
-                            {% for i in "12345" %}
-                                {% if forloop.counter <= rating_value|add:"0" %}
-                                    ⭐
-                                {% else %}
-                                    ☆
-                                {% endif %}
-                            {% endfor %}
-                            ({{ book.avg_rating|floatformat:1 }}★)
-                        </p>
-                    {% endwith %}
-                    </div>
-                </div>
-            </div>
-        {% empty %}
-            <p class="text-muted">Žádné knihy</p>
-        {% endfor %}
-    </div>
+    {% empty %}
+      <p class="text-muted">Žádné nové knihy.</p>
+    {% endfor %}
+  </div>
 </div>
 
 <div class="mt-4">
-    <h4>📌 Chystám se číst <a href="{% url 'books-wishlist' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
-    <div class="row">
-        {% for book in to_read %}
-            <div class="col-md-3 mb-3">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                            <h5 class="card-title">{{ book.title }}</h5>
-                            <p class="card-text">{{ book.author }}</p>
-
-                            {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
-                        <p class="text-warning mb-0">
-                            {% for i in "12345" %}
-                                {% if forloop.counter <= rating_value|add:"0" %}
-                                    ⭐
-                                {% else %}
-                                    ☆
-                                {% endif %}
-                            {% endfor %}
-                            ({{ book.avg_rating|floatformat:1 }}★)
-                        </p>
-                        {% endwith %}
-                        </a>
-                    </div>
-                </div>
-            </div>
-        {% empty %}
-            <p class="text-muted">Žádné knihy</p>
-        {% endfor %}
-    </div>
+  <h4>📖 Naposledy přečteno <a href="{% url 'books-read' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
+  <div class="row">
+    {% for book in recently_read %}
+      <div class="col-md-3 mb-3">
+        <div class="card h-100">
+          {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+          {% endif %}
+          <div class="card-body">
+            <h5 class="card-title">
+              <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+                {{ book.title }}
+              </a>
+            </h5>
+            <p class="card-text">{{ book.author }}</p>
+            {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
+              <p class="text-warning mb-0">
+                {% for i in "12345" %}
+                  {% if forloop.counter <= rating_value|add:"0" %}
+                    ⭐
+                  {% else %}
+                    ☆
+                  {% endif %}
+                {% endfor %}
+                ({{ book.avg_rating|floatformat:1 }}★)
+              </p>
+            {% endwith %}
+          </div>
+        </div>
+      </div>
+    {% empty %}
+      <p class="text-muted">Žádné knihy</p>
+    {% endfor %}
+  </div>
 </div>
 
 <div class="mt-4">
-    <h4>⭐ Moje nejlépe hodnocené
-        <a href="{% url 'books-best-rated' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a>
-    </h4>
-    <div class="row">
+  <h4>📌 Chystám se číst <a href="{% url 'books-wishlist' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
+  <div class="row">
+    {% for book in to_read %}
+      <div class="col-md-3 mb-3">
+        <div class="card h-100">
+          {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+          {% endif %}
+          <div class="card-body">
+            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+              <h5 class="card-title">{{ book.title }}</h5>
+              <p class="card-text">{{ book.author }}</p>
+              {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
+                <p class="text-warning mb-0">
+                  {% for i in "12345" %}
+                    {% if forloop.counter <= rating_value|add:"0" %}
+                      ⭐
+                    {% else %}
+                      ☆
+                    {% endif %}
+                  {% endfor %}
+                  ({{ book.avg_rating|floatformat:1 }}★)
+                </p>
+              {% endwith %}
+            </a>
+          </div>
+        </div>
+      </div>
+    {% empty %}
+      <p class="text-muted">Žádné knihy</p>
+    {% endfor %}
+  </div>
+</div>
+
+<div class="mt-4">
+  <h4>⭐ Moje nejlépe hodnocené <a href="{% url 'books-best-rated' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
+  <div class="row">
     {% for book in best_rated_books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
-                <div class="card-body">
-                    <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                        <h5 class="card-title">{{ book.title }}</h5>
-                        <p class="card-text">{{ book.author }}</p>
-
-                        {% if book.user_stars %}
-                            <p class="text-warning mb-0 mt-2">
-                                {% for i in "12345" %}
-                                    {% if forloop.counter <= book.user_stars %}
-                                        ⭐
-                                    {% else %}
-                                        ☆
-                                    {% endif %}
-                                {% endfor %}
-                                ({{ book.user_stars }}★)
-                            </p>
-                        {% else %}
-                            <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
-                        {% endif %}
-                    </a>
-                </div>
-            </div>
+      <div class="col-md-3 mb-3">
+        <div class="card h-100">
+          {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+          {% endif %}
+          <div class="card-body">
+            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+              <h5 class="card-title">{{ book.title }}</h5>
+              <p class="card-text">{{ book.author }}</p>
+              {% if book.user_stars %}
+                <p class="text-warning mb-0 mt-2">
+                  {% for i in "12345" %}
+                    {% if forloop.counter <= book.user_stars %}
+                      ⭐
+                    {% else %}
+                      ☆
+                    {% endif %}
+                  {% endfor %}
+                  ({{ book.user_stars }}★)
+                </p>
+              {% else %}
+                <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
+              {% endif %}
+            </a>
+          </div>
         </div>
+      </div>
     {% empty %}
-        <p class="text-muted">Zatím žádná hodnocení.</p>
+      <p class="text-muted">Zatím žádná hodnocení.</p>
     {% endfor %}
+  </div>
 </div>
 
-
 <div class="mt-4">
-    <h4>💩 Moje nejhůře hodnocené
-        <a href="{% url 'books-worst-rated' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a>
-    </h4>
-    <div class="row">
+  <h4>💩 Moje nejhůře hodnocené <a href="{% url 'books-worst-rated' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
+  <div class="row">
     {% for book in worst_rated_books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
-                <div class="card-body">
-                    <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                        <h5 class="card-title">{{ book.title }}</h5>
-                        <p class="card-text">{{ book.author }}</p>
-
-                        {% if book.user_stars %}
-                            <p class="text-warning mb-0 mt-2">
-                                {% for i in "12345" %}
-                                    {% if forloop.counter <= book.user_stars %}
-                                        ⭐
-                                    {% else %}
-                                        ☆
-                                    {% endif %}
-                                {% endfor %}
-                                ({{ book.user_stars }}★)
-                            </p>
-                        {% else %}
-                            <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
-                        {% endif %}
-                    </a>
-                </div>
-            </div>
+      <div class="col-md-3 mb-3">
+        <div class="card h-100">
+          {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+          {% endif %}
+          <div class="card-body">
+            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+              <h5 class="card-title">{{ book.title }}</h5>
+              <p class="card-text">{{ book.author }}</p>
+              {% if book.user_stars %}
+                <p class="text-warning mb-0 mt-2">
+                  {% for i in "12345" %}
+                    {% if forloop.counter <= book.user_stars %}
+                      ⭐
+                    {% else %}
+                      ☆
+                    {% endif %}
+                  {% endfor %}
+                  ({{ book.user_stars }}★)
+                </p>
+              {% else %}
+                <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
+              {% endif %}
+            </a>
+          </div>
         </div>
+      </div>
     {% empty %}
-        <p class="text-muted">Zatím žádná hodnocení.</p>
+      <p class="text-muted">Zatím žádná hodnocení.</p>
     {% endfor %}
+  </div>
 </div>
 {% endblock %}
