--- a/Final/Bookshelf/templates/includes/sidebar.html
+++ b/Final/Bookshelf/templates/includes/sidebar.html
@@ -1,23 +1,23 @@
 <div class="container-fluid">
   <div class="row">
     <!-- Levý panel -->
-    <div class="col-md-2 bg-light sidebar py-3">
+    <div class="col-md-2 sidebar py-3"> <!-- Sidebar s hnědým pozadím -->
       <ul class="nav flex-column">
-        <li class="nav-item"><a href="{% url 'book-list' %}" class="nav-link">📚 Knihy</a></li>
-        <a href="{% url 'authors-list' %}" class="nav-link">🧑‍💼 Autoři</a>
-        <li class="nav-item"><a href="{% url 'genres' %}" class="nav-link">📚 Žánry</a></li>
-        <li class="nav-item"><a href="{% url 'books-wishlist' %}" class="nav-link">📌 Wishlist</a></li>
-        <li class="nav-item"><a href="{% url 'books-read' %}" class="nav-link">✅ Přečtené</a></li>
-        <li class="nav-item"><a href="{% url 'my-library' %}" class="nav-link">📖 Moje knihovna</a></li>
-        <li class="nav-item"><a href="{% url 'loans' %}" class="nav-link">📦 Výpůjčky</a></li>
-        <li class="nav-item"><a href="{% url 'about' %}" class="nav-link">ℹ️ O projektu</a></li>
-        <li class="nav-item"><a href="{% url 'reading-room' %}" class="nav-link">🛋️ Čítárna</a></li>
-        <li class="nav-item"><a href="{% url 'tag-list' %}" class="nav-link">🏷️ Štítky</a></li>
+        <li class="nav-item"><a href="{% url 'book-list' %}" class="nav-link text-white">📚 Knihy</a></li>
+        <li class="nav-item"><a href="{% url 'authors-list' %}" class="nav-link text-white">🧑‍💼 Autoři</a></li>
+        <li class="nav-item"><a href="{% url 'genres' %}" class="nav-link text-white">📚 Žánry</a></li>
+        <li class="nav-item"><a href="{% url 'books-wishlist' %}" class="nav-link text-white">📌 Wishlist</a></li>
+        <li class="nav-item"><a href="{% url 'books-read' %}" class="nav-link text-white">✅ Přečtené</a></li>
+        <li class="nav-item"><a href="{% url 'my-library' %}" class="nav-link text-white">📖 Moje knihovna</a></li>
+        <li class="nav-item"><a href="{% url 'loans' %}" class="nav-link text-white">📦 Výpůjčky</a></li>
+        <li class="nav-item"><a href="{% url 'reading-room' %}" class="nav-link text-white">🛋️ Čítárna</a></li>
+        <li class="nav-item"><a href="{% url 'tag-list' %}" class="nav-link text-white">🏷️ Štítky</a></li>
+        <li class="nav-item"><a href="{% url 'about' %}" class="nav-link text-white">ℹ️ O projektu</a></li>
       </ul>
     </div>
 
     <!-- Obsah stránky -->
-    <div class="col-md-10">
+    <div class="col-md-10 content">
       {% block content %}{% endblock %}
     </div>
   </div>
